// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component when in error should render error component 1`] = `
<div>
  Error!
</div>
`;

exports[`App component when loading should render loading component 1`] = `
<div>
  Loading...
</div>
`;

exports[`App component when succesfully fetched the bills should render bills 1`] = `
<Tabs>
  <Tab
    title="Bills"
  >
    <Bills
      onActionClicked={[Function]}
    />
  </Tab>
  <Tab
    title="Potential bills"
  >
    <Bills
      onActionClicked={[Function]}
    />
  </Tab>
</Tabs>
`;
